--- a/AvdanyuScraper/AvdanyuScraper.csproj
+++ b/AvdanyuScraper/AvdanyuScraper.csproj
@@ -6,6 +6,7 @@
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
     <AssemblyName>AvdanyuScraper</AssemblyName>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
