--- a/AvdanyuScraper.PlayListBuilder/AvdanyuScraper.PlayListBuilder.csproj
+++ b/AvdanyuScraper.PlayListBuilder/AvdanyuScraper.PlayListBuilder.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\AvdanyuScraper.ClassLibrary\AvdanyuScraper.ClassLibrary\AvdanyuScraper.ClassLibrary.csproj" />
+    <ProjectReference Include="..\AvdanyuScraper.ClassLibrary\AvdanyuScraper.ClassLibrary\AvdanyuScraper.ClassLibrary.csproj" />
   </ItemGroup>
 
 </Project>
